fix styling issue on mobile

--- a/source/themes/geografia_theme/layouts/partials/header.html
+++ b/source/themes/geografia_theme/layouts/partials/header.html
@@ -3,8 +3,8 @@
     <ul class='title-area'>
       <li class='name'>
         <h1>
-          <a href='{{.Site.BaseURL}}/index.html'>
-            <img alt="" src="{{.Site.BaseURL}}images/geografia_logo.svg" onerror="this.onerror=null; this.src='{{.Site.BaseURL}}/images/geografia_logo.png'"/>
+          <a href='/index.html'>
+            <img alt="" src="{{ "/images/geografia_logo.svg" | relURL }}" onerror="this.onerror=null; this.src='{{.Site.BaseURL}}/images/geografia_logo.png'"/>
           </a>
         </h1>
       </li>
