--- a/source/themes/geografia_theme/layouts/index.html
+++ b/source/themes/geografia_theme/layouts/index.html
@@ -183,30 +183,7 @@
                   <div class='intro'>
                     <h3>{{ .name}}</h3>
                     <p>{{ .position}}</p>
-                    <ul class='socials'>
-
-                      {{ if isset . "linkedin" }}
-                      <li>
-                        <a target="_blank" rel="noopener" href="{{.linkedin}}">
-                          <i class="fa fa-linkedin" aria-hidden="true"></i></span>
-                        </a>
-                      </li>
-                      {{ end }}
-                      {{ if isset . "email" }}
-                      <li>
-                        <a target="_blank" rel="noopener" href="mailto:{{.email}}">
-                          <i class="fa fa-envelope" aria-hidden="true"></i></span>
-                        </a>
-                      </li>
-                      {{ end }}
-                      {{ if isset . "website" }}
-                      <li>
-                        <a target="_blank" rel="noopener" href="{{.website}}">
-                          <i class="fa fa-external-link-square" aria-hidden="true"></i>
-                        </a>
-                      </li>
-                      {{ end }}
-                    </ul>
+                    {{ partial "member_social.html" . }}
                   </div>
                 </div>
               </div>
