--- a/source/themes/geografia_theme/layouts/partials/section_header.html
+++ b/source/themes/geografia_theme/layouts/partials/section_header.html
@@ -1,8 +1,8 @@
-<div class="mod modSectionHeader {{$.Var.Class}}">
+<div class="mod modSectionHeader {{.class}}">
   <div class="special-title centered-text">
     <h2 style="color: {{.color}};">{{ .title }}</h2>
   </div>
   {{ if isset . "tagline" }}
-    <h3 class='centered-text' style='color: {{$.Var.Color}}'>{{.tagline}}</h3>
+    <h3 class='centered-text' style='color: {{.color}}'>{{.tagline}}</h3>
   {{ end }}
 </div>
