--- a/source/themes/geografia_theme/layouts/index.html
+++ b/source/themes/geografia_theme/layouts/index.html
@@ -60,9 +60,9 @@
       <div class="four spacing"></div>
 
       <div class="row">
-        {{ range .Site.Data.features }}
+        {{ range $index, $element := .Site.Data.features }}
         <div class="medium-4 large-4 columns">
-          {{ partial "icon_text.html" (dict "title" .name "desc" .description "icon_class" .icon "delay" "0" "shape_class" "icon-text-circle") }}
+          {{ partial "icon_text.html" (dict "title" .name "desc" .description "icon_class" .icon "delay" (mul 300 $index) "shape_class" "icon-text-circle") }}
         </div>
         {{ end }}
       </div>
@@ -119,8 +119,7 @@
           </div>
           <div class='medium-6 columns'>
             {{ range $index, $element := .Site.Data.features }}
-            {{ $delay := (mul 300 1) }}
-            <div class='fadein mod modIconText' data-delay='{{ $delay }}'>
+            <div class='fadein mod modIconText' data-delay={{ mul $index 300 }}>
               <div class='icon-text-simple'>
                 <i class='fa fa-{{ .icon }}'></i>
                 <h3>{{ .name }}</h3>
