--- a/source/themes/geografia_theme/layouts/services/single.html
+++ b/source/themes/geografia_theme/layouts/services/single.html
@@ -47,6 +47,6 @@
       </div>
       <div class='spacing'></div>
     </div>
-    {{ partial "footer.html" }}
+    {{ partial "footer.html" . }}
   </body>
 </html>
