add full blog partial

--- a/source/themes/geografia_theme/layouts/blog/single.html
+++ b/source/themes/geografia_theme/layouts/blog/single.html
@@ -8,7 +8,7 @@
 
     {{ partial "header.html" . }}
 
-    {{ partial "single_blog" . }}
+    {{ partial "single_blog_full" . }}
 
     {{ partial "footer.html" . }}
   </body>
