--- a/source/themes/geografia_theme/layouts/partials/single_blog_full.html
+++ b/source/themes/geografia_theme/layouts/partials/single_blog_full.html
@@ -16,7 +16,7 @@
         <a href="#">4 comments</a>
       </span>
     </p>
-    <h3><a href="{{.Permalink}}">{{.Title}}</a></h3>
+    <h3><a href="{{.RelPermalink}}">{{.Title}}</a></h3>
     <p>{{.Content}}</p>
   </div>
 </div>
