--- a/source/themes/geografia_theme/layouts/partials/single_blog.html
+++ b/source/themes/geografia_theme/layouts/partials/single_blog.html
@@ -16,9 +16,9 @@
         <a href="#">4 comments</a>
       </span>
     </p>
-    <h3><a href="{{.Permalink}}">{{.Title}}</a></h3>
+    <h3><a href="{{.RelPermalink}}">{{.Title}}</a></h3>
     <p>{{.Summary}}</p>
     <div class='spacing'></div>
-    <a class="button small" href="{{.Permalink}}">Read more</a>
+    <a class="button small" href="{{.RelPermalink}}">Read more</a>
   </div>
 </div>
