--- a/css/style.css
+++ b/css/style.css
@@ -8,10 +8,7 @@
 }
 
 @media only screen
-  and (min-device-width: 320px)
-  and (max-device-width: 480px)
-  and (-webkit-min-device-pixel-ratio: 2)
-  and (orientation: portrait) {
+  and (max-device-width: 420px)  {
     .sticky.fixed {
         top: 0px;
     }
