--- a/source/themes/geografia_theme/layouts/partials/header.html
+++ b/source/themes/geografia_theme/layouts/partials/header.html
@@ -3,7 +3,7 @@
     <ul class='title-area'>
       <li class='name'>
         <h1>
-          <a href='/index.html'>
+          <a href='{{ "/" | relURL }}'>
             <img alt="" src="{{ "/images/geografia_logo.svg" | relURL }}" onerror="this.onerror=null; this.src='{{.Site.BaseURL}}/images/geografia_logo.png'"/>
           </a>
         </h1>
