--- a/source/themes/geografia_theme/layouts/section/blog.html
+++ b/source/themes/geografia_theme/layouts/section/blog.html
@@ -56,6 +56,13 @@
           <!-- partial sidebar -->
           <div class='four spacing'></div>
         </div>
+
+        <div class='large-3 columns' id='sidebar'>
+          {{ partial "sidebar.html" . }}
+          <div class='four spacing'></div>
+        </div>
+
+
       </div>
     </div>
 
