--- a/source/themes/geografia_theme/layouts/index.html
+++ b/source/themes/geografia_theme/layouts/index.html
@@ -213,7 +213,7 @@
               <a href="{{ .RelPermalink }}"><img alt="" src="{{ .Params.banner | relURL }}" /></a>
               <div class='content'>
                 <p class='date'>{{ .Date.Format "Monday, Jan 2, 2006" }}</p>
-                <h4><a href="#">{{ .Title}}</a></h4>
+                <h4><a href="{{ .RelPermalink }}">{{ .Title}}</a></h4>
                 <p>{{ .Summary }}</p>
                 <!--
                      <div class="tags">
