--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,19 @@
 
 /* Portrait */
 #main {
-    width:100%;overflow-x:hidden
+    width:100%;
+    overflow-x:hidden;
+}
+
+body {
+    font-family: monospace;
+}
+
+.content div, p {
+    font-family: 'Roboto Slab', serif;
+    font-weight: 300;
+    font-size: 16px;
+    color: #2e382c;
 }
 
 @media only screen
@@ -627,7 +639,7 @@
 }
 /*some basic settings */
 a {
-  color: #F9CE06;
+    color: #d50000;
   -moz-transition-duration: 0.3s;
   -o-transition-duration: 0.3s;
   -webkit-transition-duration: 0.3s;
@@ -689,7 +701,7 @@ ul.shortcode-list {
   margin: 0 0 20px;
 }
 ul.shortcode-list i {
-  color: #F9CE06;
+  color: #d50000;
   margin-right: 3px;
 }
 
@@ -714,7 +726,7 @@ ul.shortcode-list i {
   -webkit-border-radius: 50%;
   border-radius: 50%;
   background-color: #f9ce06;
-  border: 3px solid #F9CE06;
+  border: 3px solid #d50000;
   -moz-transition: all 0.2s linear;
   -o-transition: all 0.2s linear;
   -webkit-transition: all 0.2s linear;
@@ -724,7 +736,7 @@ ul.shortcode-list i {
   margin: 0;
 }
 .big-social i:hover {
-  border: 3px solid #F9CE06;
+  border: 3px solid #d50000;
   background-color: rgba(249, 206, 6, 0);
 }
 
@@ -798,8 +810,8 @@ ul.shortcode-list i {
   text-transform: uppercase;
   letter-spacing: 1px;
   color: #fff;
-  background: #F9CE06;
-  border: 2px solid #F9CE06;
+  background: #d50000;
+  border: 2px solid #d50000;
 }
 
 .button:hover {
@@ -1023,7 +1035,7 @@ ul.info a {
   margin-right: 5px;
 }
 ul.info i {
-  border: 1px solid #F9CE06;
+  border: 1px solid #d50000;
   padding: 5px;
   -moz-transition: all 0.1s linear;
   -o-transition: all 0.1s linear;
@@ -1031,7 +1043,7 @@ ul.info i {
   transition: all 0.1s linear;
 }
 ul.info i:hover {
-  background: #F9CE06;
+  background: #d50000;
   color: #fff;
 }
 
@@ -1072,7 +1084,7 @@ form input.error, form textarea.error {
   color: #999;
 }
 .pager a:hover {
-  color: #F9CE06;
+  color: #d50000;
 }
 .pager .older {
   float: left;
@@ -1177,7 +1189,7 @@ form input.error, form textarea.error {
   -o-transition: all 0.2s linear;
   -webkit-transition: all 0.2s linear;
   transition: all 0.2s linear;
-  background: #F9CE06;
+  background: #d50000;
 }
 #footer input.email-address {
   padding: 5px 15px;
@@ -1211,7 +1223,7 @@ form input.error, form textarea.error {
 }
 .modBarGraph .bars p.highlighted {
   width: 0;
-  background: #F9CE06;
+  background: #d50000;
   height: 12px;
 }
 
@@ -1786,7 +1798,7 @@ form input.error, form textarea.error {
 }
 .modBoxedSlider .caption p {
   display: inline-block;
-  background: #F9CE06;
+  background: #d50000;
   color: #fff;
   font-family: "droid serif";
   margin-bottom: 0;
@@ -1811,7 +1823,7 @@ form input.error, form textarea.error {
   margin-bottom: 40px;
 }
 .modBoxedTextSlider .box i {
-  color: #F9CE06;
+  color: #d50000;
   font-size: 36px;
   width: 48px;
   height: 48px;
@@ -2930,10 +2942,10 @@ form input.error, form textarea.error {
   color: #999;
 }
 .modGallery .gallery-nav li.current {
-  border: 1px solid #F9CE06;
+  border: 1px solid #d50000;
 }
 .modGallery .gallery-nav li.current a {
-  color: #F9CE06;
+  color: #d50000;
 }
 .modGallery ul.gallery img {
   width: 100%;
@@ -3034,7 +3046,7 @@ form input.error, form textarea.error {
   margin: 0;
 }
 .modIconText .icon-text-circle:hover i {
-  color: #F9CE06;
+  color: #d50000;
 }
 .modIconText .icon-text-simple i {
   font-size: 3.42857rem;
@@ -3067,10 +3079,10 @@ body {
   color: #999;
 }
 .modMasonryGallery .gallery-nav li.current {
-  border: 1px solid #F9CE06;
+  border: 1px solid #d50000;
 }
 .modMasonryGallery .gallery-nav li.current a {
-  color: #F9CE06;
+  color: #d50000;
 }
 .modMasonryGallery ul.gallery {
   margin: 0;
@@ -3157,7 +3169,7 @@ body {
 .modMilestone i {
   font-size: 36px;
   color: #333;
-  background: #F9CE06;
+  background: #d50000;
   width: 90px;
   height: 90px;
   -moz-border-radius: 45px;
@@ -3248,7 +3260,7 @@ body {
 }
 
 .modPriceBox.featured .info {
-  border-top: 4px solid #F9CE06;
+  border-top: 4px solid #d50000;
 }
 
 .modPriceBox:hover {
@@ -3263,7 +3275,7 @@ body {
   width: 66%;
   margin: 0 auto;
   height: 2px;
-  background: #F9CE06;
+  background: #d50000;
   display: block;
 }
 
@@ -3306,7 +3318,7 @@ body {
   -moz-border-radius: 18px;
   -webkit-border-radius: 18px;
   border-radius: 18px;
-  background: #F9CE06;
+  background: #d50000;
   color: #fff;
   text-align: center;
   font-size: 1.125rem;
