--- a/source/themes/geografia_theme/layouts/contact/single.html
+++ b/source/themes/geografia_theme/layouts/contact/single.html
@@ -19,28 +19,34 @@
 
     <div class='full'>
       <div class='row'>
-        <div class='medium-8 columns'>
-          <div class='form'>
-            <div class='row'>
-              <form id='contact_form' method='POST'>
-                <div class='large-12 columns'>
-                  <p id='thanks' style='display: none;'>
-                    Thanks for contacting us, we'll be in touch soon!
-                  </p>
-                </div>
-                <div class='medium-12 columns'>
-                  <input class='required' name='name' placeholder='NAME' type='text'>
-                  <input class='required email' name='email' placeholder='EMAIL' type='text'>
-                  <input class='required' name='subject' placeholder='SUBJECT' type='text'>
-                  <textarea class='required' name='message' placeholder='MESSAGE'></textarea>
-                  <input class='button white' type='submit'>
-                </div>
-              </form>
-            </div>
-          </div>
-          <div class='two spacing'></div>
+        <!-- <div class='medium-8 columns'>
+             <div class='form'>
+             <div class='row'>
+             <form id='contact_form' method='POST'>
+             <div class='large-12 columns'>
+             <p id='thanks' style='display: none;'>
+             Thanks for contacting us, we'll be in touch soon!
+             </p>
+             </div>
+             <div class='medium-12 columns'>
+             <input class='required' name='name' placeholder='NAME' type='text'>
+             <input class='required email' name='email' placeholder='EMAIL' type='text'>
+             <input class='required' name='subject' placeholder='SUBJECT' type='text'>
+             <textarea class='required' name='message' placeholder='MESSAGE'></textarea>
+             <input class='button white' type='submit'>
+             </div>
+             </form>
+             </div>
+             </div>
+             <div class='two spacing'></div>
+             </div> -->
+        <div class='medium-6 columns'>
+          {{ with .Site.Params.address_map_gist }}
+          <iframe width='100%' height='300px' frameBorder='0'  src="{{.}}" sandbox="allow-scripts allow-same-origin allow-top-navigation">Viewer requires iframe.</iframe>
+
+          {{ end }}
         </div>
-        <div class='medium-4 columns'>
+        <div class='medium-6 columns'>
           <div class='contact-details'>
             {{ with .Site.Params.address }}
             <h4>Our location:</h4>
