--- a/source/themes/geografia_theme/layouts/index.html
+++ b/source/themes/geografia_theme/layouts/index.html
@@ -205,29 +205,28 @@
           </div>
         </div>
 
-        <div class='row'>
-          {{ range (first 3 (where .Site.Pages.ByDate.Reverse "Section" "blog"))}}
+        <div class='row blogs'>
+          <!-- {{ range (first 3 (where .Site.Pages.ByDate.Reverse "Section" "blog"))}}
 
-          <div class='large-4 medium-4 columns'>
-            <div class='mod modBlogPost'>
-              <a href="{{ .RelPermalink }}"><img alt="" src="{{ .Params.banner | relURL }}" /></a>
-              <div class='content'>
-                <p class='date'>{{ .Date.Format "Monday, Jan 2, 2006" }}</p>
-                <h4><a href="{{ .RelPermalink }}">{{ .Title}}</a></h4>
-                <p>{{ .Summary }}</p>
-                <!--
-                     <div class="tags">
-                     {{ range .Params.categories }}
-                     <a href="#">{{. | humanize}}</a>
-                     {{ end }}
-                     </div>
-                   -->
-              </div>
-            </div>
-          </div>
+               <div class='large-4 medium-4 columns'>
+               <div class='mod modBlogPost'>
+               <a href="{{ .RelPermalink }}"><img alt="" src="{{ .Params.banner | relURL }}" /></a>
+               <div class='content'>
+               <p class='date'>{{ .Date.Format "Monday, Jan 2, 2006" }}</p>
+               <h4><a href="{{ .RelPermalink }}">{{ .Title}}</a></h4>
+               <p>{{ .Summary }}</p>
+               <!--
+               <div class="tags">
+               {{ range .Params.categories }}
+               <a href="#">{{. | humanize}}</a>
+               {{ end }}
 
-          {{ end }}
-
+               </div>
+               </div>
+               </div>
+               </div>
+               {{ end }}
+             -->
         </div>
 
 
@@ -235,12 +234,11 @@
         <div class='row'>
           <div class='large-12 columns'>
             <p class='centered-text'>
-              <a class='button' href='blog.html'>See more posts</a>
+              <a class='button' target="_blank" rel="noopener" href='https://medium.com/geografia'>See more posts</a>
             </p>
           </div>
         </div>
         <div class='two spacing'></div>
-
       </div>
 
 
