--- a/source/themes/geografia_theme/layouts/about/single.html
+++ b/source/themes/geografia_theme/layouts/about/single.html
@@ -47,30 +47,9 @@
       </div>
     </div>
 
-
     <div class='full'>
-      <div class='row'>
-        {{ range sort .Site.Data.team "weight" "asc" }}
-        <div class='small-6 medium-3 large-3 columns'>
-          <div class='mod modTeamMember'>
-            <div class='member'>
-              <img class="avatar" alt="" src="{{ .avatar | relURL}}" />
-              <div class='overlay'>
-                <div class='intro'>
-                  <h3>{{.name}}</h3>
-                  <p>{{.position}}</p>
-                  {{ partial "member_social.html" . }}
-                </div>
-              </div>
-            </div>
-            <p class='centered-text'>{{.text}}</p>
-            <div class='two spacing'></div>
-          </div>
-        </div>
-        {{ end }}
-      </div>
+      {{ partial "members_list" .Site.Data.team }}
     </div>
-
 
     <div class='full parallax' style='background: #f5f5f5'>
       <div class='row'>
