--- a/source/themes/geografia_theme/layouts/index.html
+++ b/source/themes/geografia_theme/layouts/index.html
@@ -10,52 +10,9 @@
 
     <div id='main' role='main'>
 
-      <div class='mod modDefaultSlider'>
-        <div class='sequence' data-autostop='on' data-timeout='0'>
-          <a class='sequence-prev' href='javascript:void(0);'>
-            <span></span>
-          </a>
-          <a class='sequence-next' href='javascript:void(0);'>
-            <span></span>
-          </a>
-          <ul class='sequence-pagination'>
-            {{ range $index, $element := .Site.Data.slides }}
-            <li class="{{ if gt $index 1 }}{{else}}current{{end}}"></li>
-            {{ end }}
-          </ul>
-          <ul class='sequence-canvas'>
-            {{ range $index, $element := .Site.Data.slides }}
-            <li class='frame {{ if gt $index 1 }}{{else}}static{{end}} {{ $element.klass }}'>
-              <div class='bg' style='background-image: url({{ $element.bg}});'></div>
-              <div class='small-title {{ $element.small_title.klass }}'>
-                <div class='row'>
-                  <div class='large-12 columns'>
-                    <h2>{{ $element.small_title.text }}</h2>
-                  </div>
-                </div>
-              </div>
-              <div class='title {{ $element.title.klass }}'>
-                <div class='row'>
-                  <div class='large-12 columns'>
-                    <h2>{{ $element.title.text }}</h2>
-                  </div>
-                </div>
-              </div>
-              <div class='buttons-wrapper {{ $element.buttons.klass }}'>
-                <div class='row'>
-                  <div class='large-12 columns'>
-                    <div class='two spacing'></div>
-                    {{ range $element.buttons.items }}
-                    <a class='button {{ .klass }}' href='{{ .link_to }}'>{{ .text }}</a>
-                    {{ end }}
-                  </div>
-                </div>
-              </div>
-            </li>
-            {{ end }}
-          </ul>
-        </div>
-      </div>
+      {{ if .Site.Params.main_slider.enable  }}
+        {{ partial "main_slider.html" . }}
+      {{ end }}
 
       <div class="four spacing"></div>
 
@@ -69,15 +26,16 @@
 
       <div class="spacing"></div>
 
+      {{ if .Site.Params.works.enable  }}
       <div class="full" style="background: #f5f5f5;">
         <div class="row">
           <div class="large-12 columns">
             {{ partial "section_header.html" (dict "title" "Our works") }}
+            {{ with .Site.Params.works.teaser }}
             <div class="spacing"></div>
-            <p>
-              Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing.
-            </p>
+            <p>{{.}}</p>
             <div class="three spacing"></div>
+            {{ end }}
           </div>
         </div>
 
@@ -99,7 +57,7 @@
           </ul>
         </div>
       </div>
-
+      {{ end }}
 
       <div class='full'>
         <div class='row'>
