--- a/source/themes/geografia_theme/layouts/about/single.html
+++ b/source/themes/geografia_theme/layouts/about/single.html
@@ -12,7 +12,7 @@
 
     {{ $testimonials := (slice (dict "quote" "Reprehenderit eos et non et ut eum reprehenderit quis sequi quia vel repellendus id. Velit quit blanditiis dolor quam error eos dolores sequi eaque rerum est. Velit quit blanditiis dolor quam error eos dolores sequi eaque rerum est." "author" "David White, Designer at Huglab") (dict "quote" "Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing." "author" "David White, Designer at Huglab") (dict "quote" "Reprehenderit eos et non et ut eum reprehenderit quis sequi quia vel repellendus id. Velit quit blanditiis dolor quam error eos dolores sequi eaque rerum est." "author" "David White, Designer at Huglab")) }}
 
-    <div class='full parallax' style='background-image: url(/images/@stock/about-us.jpg); color: #fff;'>
+    <div class='full parallax' style='background-image: url(/images/Geografia/about-us.jpg); color: #fff;'>
       <div class='row'>
         <div class='twelve columns'>
           {{ partial "section_header.html" (dict "title" "About us" "color" "#fff" "tagline" "Know something about our team" "class" "big") }}
