--- a/source/themes/geografia_theme/layouts/partials/our_customers.html
+++ b/source/themes/geografia_theme/layouts/partials/our_customers.html
@@ -1,7 +1,7 @@
-<div class='full parallax' style='background-image: url({{ "/images/@stock/customers-bg.jpg" | absURL}}); color: #fff;'>
+<div class='full parallax' style='background-image: url({{ "/images/Geografia/customers-bg.jpg" | absURL}}); color: #fff;'>
   <div class='row'>
     <div class='large-12 columns'>
-      {{ partial "section_header.html" (dict "title" "Our customers" "color" "#fff") }}
+      {{ partial "section_header.html" (dict "title" "Our customers" "color" "#333333") }}
       <div class='spacing'></div>
       <p>
         Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing.
