--- a/source/themes/geografia_theme/layouts/projects/single.html
+++ b/source/themes/geografia_theme/layouts/projects/single.html
@@ -8,7 +8,7 @@
 
     {{ partial "header.html" . }}
 
-    <div class='full parallax' style='background-image: url(/images/@stock/portfolio-header-bg.jpg); color: #fff;'>
+    <div class='full parallax' style='background-image: url(/images/Geografia/portfolio-header-bg.jpg); color: #fff;'>
       <div class='row'>
         <div class='large-12 columns'>
           {{ partial "section_header.html" (dict "title" "Our projects" "tagline" "Have a look at our works" "color" "#fff" "class" "big") }}
