--- a/source/themes/geografia_theme/layouts/services/single.html
+++ b/source/themes/geografia_theme/layouts/services/single.html
@@ -8,7 +8,7 @@
 
     {{ partial "header.html" . }}
 
-    <div class='full parallax' style='background-image: url(/images/@stock/service-page-header.jpg); color: #fff;'>
+    <div class='full parallax' style='background-image: url(/images/Geografia/service-page-header.jpg); color: #fff;'>
       <div class='row'>
         <div class='large-12 columns'>
           {{ partial "section_header.html" (dict "title" "Our services" "tagline" "Get to know what we do" "color" "#fff" "class" "big") }}
