--- a/source/themes/geografia_theme/layouts/contact/single.html
+++ b/source/themes/geografia_theme/layouts/contact/single.html
@@ -8,7 +8,7 @@
 
     {{ partial "header.html" . }}
 
-    <div class='full parallax' style='background-image: url(/images/@stock/contact-header-bg.jpg); color: #fff;'>
+    <div class='full parallax' style='background-image: url(/images/Geografia/contact-header-bg.jpg); color: #fff;'>
       <div class='row'>
         <div class='large-12 columns'>
           {{ partial "section_header.html" (dict "title" "Contact Us" "tagline" "Drop by or send an email to us" "color" "#fff" "class" "big") }}
