--- a/source/themes/geografia_theme/layouts/index.html
+++ b/source/themes/geografia_theme/layouts/index.html
@@ -72,7 +72,7 @@
         </div>
         <div class='row'>
           <div class='medium-6 columns'>
-            <img class="fadeinleft" alt="" src="images/@stock/responsive.png" />
+            <img class="fadeinleft" alt="" src="images/Geografia/responsive.png" />
             <div class='three spacing'></div>
           </div>
           <div class='medium-6 columns'>
@@ -92,7 +92,7 @@
       </div>
 
 
-      <div class='full parallax' style='background-image: url(images/@stock/milestone-bg.jpg); color: #fff;'>
+      <div class='full parallax' style='background-image: url(images/Geografia/milestone-bg.jpg); color: #fff;'>
         <div class='row'>
           <div class='large-12 columns'>
             {{ partial "section_header.html" (dict "title" "Parallax effect" "color" "#fff") }}
