--- a/source/themes/geografia_theme/layouts/partials/footer.html
+++ b/source/themes/geografia_theme/layouts/partials/footer.html
@@ -7,7 +7,7 @@
           <img alt="" src="{{ .Site.BaseURL }}/images/logo-grey.png" />
         </a>
       </h1>
-      <p>©2014 Devoll. All rights reserved.</p>
+      <p>©2016 Geografia.</p>
       <div class='spacing'></div>
       <div class='spacing'></div>
     </div>
