--- a/source/themes/geografia_theme/layouts/section/projects.html
+++ b/source/themes/geografia_theme/layouts/section/projects.html
@@ -37,17 +37,7 @@
           <ul class='gallery large-block-grid-4 medium-block-grid-3 small-block-grid-2'>
 
             {{ range (where .Site.Pages "Section" "projects") }}
-            <li class="{{ delimit .Params.categories " " }}">
-              <a href='{{ .RelPermalink }}'>
-                <img style="width:400px;height:269px;background-size:cover;background-image:url({{ with .Params.banner }}/img/projects/{{  . }}{{else}}/images/@stock/work-1.jpg{{end}});" alt="" src="" />
-                <div class='overlay'>
-                  <div class='thumb-info'>
-                    <h3>{{ .Params.title }}</h3>
-                    <p>{{ .Params.summary_text }}</p>
-                  </div>
-                </div>
-              </a>
-            </li>
+            {{ partial "project_item.html" . }}
             {{ end }}
 
           </ul>
