only show year the projects were done

--- a/source/themes/geografia_theme/layouts/projects/single.html
+++ b/source/themes/geografia_theme/layouts/projects/single.html
@@ -55,7 +55,7 @@
               {{ . }}
             </li>
             {{ end }}
-            {{ with .Date.Format "Jan 2006" }}
+            {{ with .Date.Format "2006" }}
             <li>
               <strong>Date:</strong>
               {{ . }}
