--- a/source/themes/geografia_theme/layouts/partials/header.html
+++ b/source/themes/geografia_theme/layouts/partials/header.html
@@ -4,7 +4,7 @@
       <li class='name'>
         <h1>
           <a href='{{ "/" | relURL }}'>
-            <img alt="" src="{{ "/images/geografia_logo.svg" | relURL }}" onerror="this.onerror=null; this.src='{{.Site.BaseURL}}/images/geografia_logo.png'"/>
+            <img style="width:75%; height:75%;" title="[Γε0γραφια] a 3,000 year old discipline that explores the interaction between people and places" src="{{ "/images/geografia_logo.svg" | relURL }}" onerror="this.onerror=null; this.src='{{.Site.BaseURL}}/images/geografia_logo.png'"/>
           </a>
         </h1>
       </li>
