--- a/source/themes/geografia_theme/layouts/index.html
+++ b/source/themes/geografia_theme/layouts/index.html
@@ -132,6 +132,16 @@
 
         {{ partial "members_list" .Site.Data.team }}
 
+        <div class='row'>
+          <div class='large-12 columns'>
+            {{ partial "section_header.html" (dict  "title" "Our Associates") }}
+            <div class='spacing'></div>
+            <div class='two spacing'></div>
+          </div>
+        </div>
+
+        {{ partial "members_list" .Site.Data.associates }}
+
       </div>
 
       <div class='full' style='background: #f5f5f5'>
